# x17

./: README.md  makefile  requirements.txt  test.py  test_src_platform_component_file.py  tmp.py
app/x17-manjusri/: README.md
doc/: base
lib/x17-lib-base/: .gitignore  .isort.cfg  README.md  environment.yml  makefile  pyproject.toml
lib/x17-lib-code/: environment.yml  makefile  pyproject.toml  requirements.txt
lib/x17-lib-container/: .gitignore  environment.yml  makefile  pyproject.toml  pytest.ini  requirements.dev.txt  test.py
lib/x17-lib-database/: environment.yml  makefile  pyproject.toml  requirements.dev.txt
lib/x17-lib-database/x17_database/: README.md  __init__.py
lib/x17-lib-intelligence/: environment.yml  makefile  pyproject.toml
lib/x17-lib-intelligence/.shell/: conda-env-remove.sh  pytest-cache-clear.sh
lib/x17-lib-intelligence/x17_intelligence/exception/: ollama.py
lib/x17-lib-intelligence/x17_intelligence/handler/: base.py  ollama.py
lib/x17-lib-intelligence/x17_intelligence/handler/tests/: test_class_basehandler.py
lib/x17-lib-intelligence/x17_intelligence/interface/: base.py  ollama.py
lib/x17-lib-intelligence/x17_intelligence/interface/tests/: test_class_baseinterface.py
lib/x17-lib-intelligence/x17_intelligence/model/: base.py  ollama.py
lib/x17-lib-intelligence/x17_intelligence/model/tests/: test_class_basemodel.py
moto/client/: nlp.py
moto/particle/: constant.py  date_time.py  datestamp.py  duration.py  text.py  (+1 more)
pangu/: makefile  requirements.txt
shuli/: README.md  core.py  parser.py  pyproject.toml
shuli/.doc/: BASE DESIGN.md  DESIGN.md
shuli/base/: __init__.py  node.py  nodetype.py  x_argument.py  x_class.py  x_codeblock.py  x_comment.py  x_function.py  x_import.py  x_node.py  x_nodetype.py
shuli/base/tests/: test_class_argument.py  test_class_class.py  test_class_codeblock.py  test_class_comment.py  test_class_function.py  test_class_import.py  test_class_node.py  test_class_nodetype.py  test_class_pyimport.py
shuli/resource/python/: __init__.py  pyargument.py  pyclass.py  pycodeblock.py  pycomment.py  pyfunction.py  pyimport.py  pymodule.py  pynode.py  pystatement.py  python.py
shuli/resource/python/tests/: sample.py  test_class_pyargument.py  test_class_pyclass.py  test_class_pycodeblock.py  test_class_pycomment.py  test_class_pyfunction.py  test_class_pyimport.py  test_class_pymodule.py  test_class_pynode.py  test_class_pystatement.py
tests/: test_src_particle_datetime.py  test_src_particle_duration.py
x17-nvwa/: README.md  environment.yml  makefile  pyproject.toml  requirements.dev.txt  requirements.txt
x17-nvwa/.shell/: conda-env-activate.sh  conda-env-init.sh  conda-env-remove.sh  project-zip.sh  pytest-cache-clear.sh  python-cache-clear.sh  python-code-format.sh  python-deps-install.sh
x17-nvwa/nvwa/: test.py
x17-nvwa/nvwa/handler/: __init__.py  base.py  ollama.py
x17-nvwa/nvwa/handler/tests/: test_class_basehandler.py
x17-nvwa/nvwa/interface/: base.py  ollama.py
x17-nvwa/nvwa/interface/tests/: test_class_baseinterface.py
x17-nvwa/nvwa/model/: base.py
x17-nvwa/nvwa/model/tests/: test_class_basemodel.py
x17-pangu/: makefile  pyproject.toml
x17-wenchang/: makefile  pyproject.toml
(+401 files in other folders)
