[project]
name = "x17-nvwa"
version = "0.1.0"
description = "NVWA: Deployable LLM interface with modular interface, model, and handler architecture."
authors = [
    { name = "Xing Xing", email = "x.xing.work@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "pytest",
    "x17-pangu"
]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  ".", 
  "nvwa",
]

[tool.black]
line-length = 100
target-version = ["py310"]